apps/base/servarr/jellyfin/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  serviceName: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
        - image: ghcr.io/jellyfin/jellyfin:10.10.6
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http
          readinessProbe:
            httpGet:
              path: /web/index.html
              port: 8096
            failureThreshold: 5
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 3000m
              memory: 8Gi
              squat.ai/drm: "1"
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: media
              mountPath: /movies
              subPath: movies
              readOnly: true
            - name: media
              mountPath: /shows
              subPath: shows
              readOnly: true
            - name: cache
              mountPath: /cache
            - name: config
              mountPath: /config
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: cache
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: rook-ceph-block
