apps/base/servarr/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  ports:
    - port: 8096
  selector:
    app.kubernetes.io/name: jellyfin
